--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
 						bản thân, cũng như hoàn thành tốt nhất công việc được giao.
 					</p>
 				</div>
+				<!-- <p>
+					<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#personal-info" aria-expanded="false" aria-controls="personal-info">
+						Open
+					</button>
+				</p> -->
 				<div class="about-content personal-info" id="personal-info">
 					<h1 class="section-title">Thông tin cá nhân</h1>
 					<ul class="info">
