--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 	<div class="banner" id="banner">
-		<img class="banner-img" src="/images/banner.jpg" alt="picture">
+		<img class="banner-img" src="images/banner.jpg" alt="picture">
 		<div class="banner-centered">
 			<h1>Trần Thị Thu Sương</h1>
 			<span>Full Stack Developer</span>
